--- a/frontend/codegen.yml
+++ b/frontend/codegen.yml
@@ -6,4 +6,5 @@ generates:
     plugins:
       - "typescript"
       - "typescript-operations"
+      - "urql-introspection"
       - "typescript-urql"
