--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,6 +10,8 @@
     "generate": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@graphql-codegen/urql-introspection": "^2.2.1",
+    "@types/node": "^18.8.2",
     "graphql": "^16.6.0",
     "graphql-ws": "^5.11.2",
     "react": "^18.2.0",
@@ -21,11 +23,12 @@
     "@graphql-codegen/typescript": "^2.7.3",
     "@graphql-codegen/typescript-operations": "^2.5.3",
     "@graphql-codegen/typescript-urql": "^3.7.0",
-    "@types/react": "^18.0.17",
+    "@types/node": "^18.8.2",
+    "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
     "graphql-tag": "^2.12.6",
-    "typescript": "^4.6.4",
-    "vite": "^3.1.0"
+    "typescript": "^4.8.4",
+    "vite": "^3.1.4"
   }
 }
